# HomeworkInfoSync

./: .gitignore  Cargo.toml  README.md  config.example.json  gui.py  homework_reminder.py  pixi.toml
.github/workflows/: ci.yml  release.yml
homework-app/: Cargo.toml  build.rs
homework-app/cpp/: ui_bridge.cpp  ui_bridge.h
homework-app/src/: controller.rs  ffi.rs  main.rs
homework-core/: Cargo.toml
homework-core/src/: cache.rs  config.rs  fetch.rs  lib.rs  log.rs  models.rs
homework-core/src/clients/: chaoxing.rs  ketangpai.rs  mod.rs  yuketang.rs
