[package]
name = "homework-app"
version = "0.2.0"
edition = "2021"
description = "HomeworkSync Qt Widgets GUI"

[[bin]]
name = "HomeworkSync"
path = "src/main.rs"

[dependencies]
homework-core = { path = "../homework-core" }
serde_json = "1"

[build-dependencies]
cpp_build = "0.5"
qttypes = "0.2"
winres = "0.1"
