[package]
name = "homework-core"
version = "0.2.0"
edition = "2021"
description = "Multi-platform homework fetch core for HomeworkSync"

[[bin]]
name = "homework-remind"
path = "src/bin/remind.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
qrcode = "0.14"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "cookies",
    "json",
    "rustls-tls",
] }
scraper = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
url = "2"
image = "0.25"
